# FeatureManagement-Python

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  cspell.config.yaml  dev_requirements.txt  mypy.ini  project-words.txt  pyproject.toml  sdk_packaging.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/skills/ci-failure-debugging/: SKILL.md
.github/skills/samples/: SKILL.md
.github/skills/sync-async-pattern/: SKILL.md
.github/workflows/: codeql.yml  validate.yml
docs/: conf.py  index.html  index.rst  microsoft.featuremanagement.aio.rst  microsoft.featuremanagement.rst
docs/_build/html/: .buildinfo  featuremanagement.aio.html  featuremanagement.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/doctrees/: environment.pickle  featuremanagement.aio.doctree  featuremanagement.doctree  index.doctree  readme.doctree
docs/html/: .buildinfo  featuremanagement.aio.html  featuremanagement.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: featuremanagement.aio.rst.txt  index.rst.txt
featuremanagement/: __init__.py  _defaultfilters.py  _featurefilters.py  _featuremanager.py  _featuremanagerbase.py  _send_telemetry_appinsights.py  _version.py
featuremanagement/_models/: __init__.py  _allocation.py  _constants.py  _evaluation_event.py  _feature_conditions.py  _feature_flag.py  _targeting_context.py  _telemetry.py  _variant.py  _variant_assignment_reason.py  _variant_reference.py
featuremanagement/_time_window_filter/: __init__.py  _models.py  _recurrence_evaluator.py  _recurrence_validator.py
featuremanagement/aio/: __init__.py  _defaultfilters.py  _featurefilters.py  _featuremanager.py
featuremanagement/appinsights/: __init__.py  _send_telemetry_appinsights.py
featuremanagement/azuremonitor/: __init__.py  _send_telemetry.py
featuremanagement/opentelemetry/: __init__.py  _send_telemetry.py
html/: .buildinfo  genindex.html
microsoft/feature/management/: _constants.py  _defaultfilters.py  _featurefilters.py  _featuremanager.py
microsoft/featuremanagement/: __init__.py  _defaultfilters.py  _featurefilters.py  _featuremanager.py
microsoft/featuremanagement/_models/: _feature_flag.py
microsoft/featuremanagement/aio/: __init__.py  _defaultfilters.py  _featurefilters.py  (+1 more)
samples/: feature_flag_sample.py  feature_flag_with_azure_app_configuraiton_sample.py  feature_flag_with_azure_app_configuration_sample.py  feature_variant_sample.py  feature_variant_sample_with_targeting_accessor.py  feature_variant_sample_with_telemetry.py  formatted_feature_flags.json  quarty_sample.py  random_filter.py  requirements.txt  telemetry_samples.json  test.py
tests/: all_feature_flag_options.json  requirements.txt  test_default_feature_flag_from_file.py  test_default_feature_flags.py  test_default_feature_flags_async.py  test_feature_manager.py  test_feature_manager_async.py  test_feature_manager_cache.py  test_feature_manager_cache_async.py  test_feature_manager_refresh.py  test_feature_variants.py  test_feature_variants_async.py  test_send_telemetry_appinsights.py
tests/time_window_filter/: recurrence_util.py  test_recurrence_evaluator.py  test_recurrence_validator.py  test_time_window_filter_models.py
tests/validation_tests/: NoFilters.sample.json  NoFilters.tests.json  TestFiles  load_feature_flags.py  test_json_validations.py  test_no_filters_from_file.py  test_requirement_type_from_file.py  test_targeting_filter_from_file.py  test_time_window_from_file.py
(+7 files in other folders)
