[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 1
max-branches = 20
max-returns = 7

[tool.pylint."messages_control"]
disable = ["duplicate-code"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FeatureManagement"
dynamic = ["version"]
authors = [
  { name="Microsoft Corporation", email="appconfig@microsoft.com" },
]
description = "A library for enabling/disabling features at runtime."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "License :: OSI Approved :: MIT License",
    ]

[tool.setuptools.dynamic]
version = {attr = "featuremanagement._version.VERSION"}

[tool.setuptools.packages.find]
include = ["featuremanagement*"]

[tool.setuptools.package-data]
featuremanagement = ["py.typed"]

[project.urls]
Homepage = "https://github.com/microsoft/FeatureManagement-Python"
Issues = "https://github.com/microsoft/FeatureManagement-Python/issues"

[project.optional-dependencies]
AzureMonitor = ["opentelemetry-sdk >= 1.20.0, < 2.0.0"]
test = [
    "azure-monitor-opentelemetry < 2.0.0",
]
dev = [
    "pytest >= 7.0.0, < 10.0.0",
    "pytest-cov >= 4.0.0, < 8.0.0",
    "pytest-asyncio >= 0.21.0, < 2.0.0",
    "black >= 23.0.0, < 27.0.0",
    "pylint >= 3.0.0, < 5.0.0",
    "mypy >= 1.0.0, < 2.0.0",
    "sphinx >= 7.0.0, < 10.0.0",
    "sphinx_rtd_theme >= 2.0.0, < 4.0.0",
    "sphinx-toolbox >= 3.0.0, < 5.0.0",
    "myst_parser >= 2.0.0, < 6.0.0",
    "opentelemetry-api >= 1.20.0, < 2.0.0",
    "opentelemetry-sdk >= 1.20.0, < 2.0.0",
]
